Creating resume format

--- a/index.html
+++ b/index.html
@@ -1,19 +1,60 @@
-<!doctype html>
-
+<!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="utf-8">
-
-  <title>My Resume</title>
-
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="css/index.css">
-
-  <!--[if lt IE 9]>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
-  <![endif]-->
+  <title>My Resume</title>
 </head>
 
 <body>
-  <h1>My Resume</h1>
+
+  <nav>
+    <a href="#Home">Home</a>
+    <a href="#About">About</a>
+    <a href="#Portfolio">Portfolio</a>
+    <a href="#Contact">Contact</a>
+  </nav>
+
+  <div class="header">
+    <img src="" alt="Photo of John">
+    <h1>John Kirtley - Web Developer</h1>
+    <h3>Headline</h3>
+    <hr>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus, reprehenderit fugiat. Sequi.</p>
+    <button>
+      Let's Team Up
+    </button>
+  </div>
+
+  <div class="middle-section">
+    <div class="listenup">
+      <h2>Title</h2>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste natus veritatis necessitatibus dolore iusto
+        cupiditate minus corporis possimus suscipit harum. Fugit cumque quia nisi!</p>
+    </div>
+    <div class="skills">
+      <h2>Stuff I'm Good At:</h2>
+      <ul>
+        <li>Skill 1</li>
+        <li>Skill 2</li>
+        <li>Skill 3</li>
+        <li>Skill 4</li>
+      </ul>
+    </div>
+
+  </div>
+
+  <div class="work-history">
+    <!-- insert table -->
+  </div>
+
+  <footer>
+    <p>Copyright</p>
+  </footer>
+
 </body>
+
 </html>
