--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="css/index.css">
   <title>My Resume</title>
+  <style>
+    @import url('https://fonts.googleapis.com/css?family=Sulphur+Point&display=swap');
+  </style>
 </head>
 
 <body>
@@ -15,40 +18,79 @@
     <a href="#Home">Home</a>
     <a href="#About">About</a>
     <a href="#Portfolio">Portfolio</a>
-    <a href="#Contact">Contact</a>
+    <a href="mailto:kirtleyj16@gmail.com">Contact</a>
   </nav>
 
   <div class="header">
-    <img src="" alt="Photo of John">
+    <img src="images/profile-pic.jpg" alt="Photo of John">
     <h1>John Kirtley - Web Developer</h1>
-    <h3>Headline</h3>
+    <h3>Front End Web Developer</h3>
     <hr>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus, reprehenderit fugiat. Sequi.</p>
+    <p>Financial Analyst Transitioning To Web Developer</p>
     <button>
       Let's Team Up
     </button>
   </div>
 
   <div class="middle-section">
-    <div class="listenup">
+    <div class="listen-up">
       <h2>Title</h2>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste natus veritatis necessitatibus dolore iusto
-        cupiditate minus corporis possimus suscipit harum. Fugit cumque quia nisi!</p>
+      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Enim sint doloribus maiores tempora, iste mollitia
+        rem, odit suscipit non, eligendi est. Consectetur, maxime temporibus earum doloribus eligendi debitis libero nam
+        impedit enim cupiditate necessitatibus dolorum, reprehenderit optio hic sed animi nulla odit, excepturi expedita
+        quo quidem omnis blanditiis ipsam recusandae Lorem ipsum dolor sit amet consectetur, adipisicing elit. Mollitia
+        accusantium atque voluptatibus debitis possimus deleniti! Similique, earum, quod dolorem, numquam repellat ad
+        labore enim saepe perferendis quo alias vero dicta Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quo
+        adipisci quos qui molestiae, vitae, soluta velit expedita voluptates, voluptate eligendi doloremque
+        necessitatibus sint enim nihil at eius non ut laboriosam.</p>
     </div>
     <div class="skills">
       <h2>Stuff I'm Good At:</h2>
-      <ul>
-        <li>Skill 1</li>
-        <li>Skill 2</li>
-        <li>Skill 3</li>
-        <li>Skill 4</li>
-      </ul>
+      <div class="skill-list">
+        <div class="skill">Skill 1</div>
+        <div class="skill">Skill 1</div>
+        <div class="skill">Skill 1</div>
+        <div class="skill">Skill 1</div>
+      </div>
+
     </div>
 
   </div>
 
   <div class="work-history">
-    <!-- insert table -->
+    <h2>Work History</h2>
+    <table style="width: 100%;" border="1" cellpadding="5">
+      <tr>
+        <th>Years</th>
+        <th>Company</th>
+        <th>Title</th>
+        <th>Tech Used</th>
+      </tr>
+      <tr>
+        <td>1</td>
+        <td>Google</td>
+        <td>Engineer</td>
+        <td>React</td>
+      </tr>
+      <tr>
+        <td>1</td>
+        <td>Google</td>
+        <td>Engineer</td>
+        <td>React</td>
+      </tr>
+      <tr>
+        <td>1</td>
+        <td>Google</td>
+        <td>Engineer</td>
+        <td>React</td>
+      </tr>
+      <tr>
+        <td>1</td>
+        <td>Google</td>
+        <td>Engineer</td>
+        <td>React</td>
+      </tr>
+    </table>
   </div>
 
   <footer>
