Added more resume info

--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
     <div class="skills">
       <h2>Stuff I'm Good At:</h2>
       <div class="skill-list">
-        <div class="skill">Skill 1</div>
-        <div class="skill">Skill 1</div>
-        <div class="skill">Skill 1</div>
-        <div class="skill">Skill 1</div>
+        <div class="skill">HTML</div>
+        <div class="skill">CSS</div>
+        <div class="skill">LESS</div>
+        <div class="skill">Javascript</div>
       </div>
 
     </div>
@@ -69,26 +69,26 @@
       <tr>
         <td>1</td>
         <td>Google</td>
-        <td>Engineer</td>
-        <td>React</td>
+        <td>Front End Developer</td>
+        <td>HTML, CSS, Javascript, React</td>
       </tr>
       <tr>
         <td>1</td>
-        <td>Google</td>
-        <td>Engineer</td>
-        <td>React</td>
+        <td>Facebook</td>
+        <td>Front End Developer</td>
+        <td>HTML, CSS, Javascript, React</td>
       </tr>
       <tr>
         <td>1</td>
-        <td>Google</td>
-        <td>Engineer</td>
-        <td>React</td>
+        <td>Airbnb </td>
+        <td>Front End Developer</td>
+        <td>HTML, CSS, Javascript, React</td>
       </tr>
       <tr>
         <td>1</td>
-        <td>Google</td>
-        <td>Engineer</td>
-        <td>React</td>
+        <td>Uber</td>
+        <td>Front End Developer</td>
+        <td>HTML, CSS, Javascript, React</td>
       </tr>
     </table>
   </div>
